--- a/index.html
+++ b/index.html
@@ -83,29 +83,32 @@
   const userInput = document.getElementById("user-input");
 
   async function sendMessage() {
-    const message = userInput.value.trim();
-    if (!message) return;
+  const message = userInput.value.trim();
+  if (!message) return;
 
-    appendMessage("أنت", message, "user");
-    userInput.value = "";
+  appendMessage("أنت", message, "user");
+  userInput.value = "";
 
-    appendMessage("GPT", "جاري الكتابة...", "bot");
+  appendMessage("المساعد", "جاري الكتابة...", "bot");
 
-    try {
-      const response = await fetch("https://modweeb-chatgpt.modweeb3.workers.dev", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ message })
-});
+  try {
+    const response = await fetch("https://modweeb-chatgpt.modweeb3.workers.dev", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ message })
+    });
 
-      if (!response.ok) throw new Error("فشل في الاتصال بالخادم");
-      const { reply } = await response.json();
-      updateLastBotMessage(reply);
-    } catch (error) {
-      updateLastBotMessage("⚠️ حدث خطأ: " + error.message);
-      console.error("Error:", error);
-    }
+    if (!response.ok) throw new Error("فشل في الاتصال بالخادم");
+    const { reply, error } = await response.json();
+    
+    if (error) throw new Error(error);
+    updateLastBotMessage(reply || "لا يوجد رد");
+    
+  } catch (error) {
+    updateLastBotMessage("⚠️ " + error.message);
+    console.error("Error:", error);
   }
+}
 
   function appendMessage(sender, text, type) {
     const div = document.createElement("div");
