--- a/index.html
+++ b/index.html
@@ -88,25 +88,31 @@
 
   appendMessage("أنت", message, "user");
   userInput.value = "";
-
   appendMessage("المساعد", "جاري الكتابة...", "bot");
 
   try {
     const response = await fetch("https://modweeb-chatgpt.modweeb3.workers.dev", {
       method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ message })
+      headers: { 
+        "Content-Type": "application/json; charset=utf-8"
+      },
+      body: JSON.stringify({ 
+        message: message.substring(0, 1000) // تقليل طول الرسالة
+      })
     });
 
-    if (!response.ok) throw new Error("فشل في الاتصال بالخادم");
-    const { reply, error } = await response.json();
+    const data = await response.json();
+    if (data.error) throw new Error(data.error);
     
-    if (error) throw new Error(error);
-    updateLastBotMessage(reply || "لا يوجد رد");
+    updateLastBotMessage(data.reply || "لا يوجد رد");
     
   } catch (error) {
-    updateLastBotMessage("⚠️ " + error.message);
-    console.error("Error:", error);
+    updateLastBotMessage("⚠️ " + (
+      error.message.includes('JSON') ? "خطأ في إرسال البيانات" :
+      error.message.includes('Network') ? "مشكلة في الاتصال" :
+      error.message
+    ));
+    console.error("Error details:", error);
   }
 }
 
