--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مولد الصور المصغرة للمدونات</title>
 <style>
     :root {
         --contentL: #e0e0e0;
@@ -530,7 +536,8 @@
         }
     }
 </style>
-
+</head>
+<body>
 
 <div class="heroBox">
     <div class="BoxTool">
@@ -1564,3 +1571,5 @@ document.addEventListener('DOMContentLoaded', function() {
             });
         });
     </script>
+    </body>
+</html>
