--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>دردشة GPT - Modweeb</title>
   <style>
     body {
-      font-family: Tahoma, sans-serif;
-      background-color: #f9f9f9;
+      font-family: "Segoe UI", Tahoma, sans-serif;
+      background: linear-gradient(to top left, #f3f4f6, #e2e8f0);
       margin: 0;
       padding: 20px;
       direction: rtl;
@@ -16,129 +16,170 @@
       max-width: 700px;
       margin: auto;
       background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      min-height: 90vh;
+    }
+
+    .chat-header {
+      background: #1a73e8;
+      color: white;
       padding: 20px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
     }
 
     .chat-box {
-      height: 400px;
+      flex: 1;
+      padding: 20px;
       overflow-y: auto;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 10px;
-      background: #fefefe;
-      margin-bottom: 15px;
+      background: #f9fafb;
     }
 
-    .chat-box div {
-      margin-bottom: 10px;
+    .message {
+      margin: 10px 0;
+      padding: 10px 15px;
+      border-radius: 20px;
+      max-width: 75%;
+      line-height: 1.6;
+      word-wrap: break-word;
+      position: relative;
     }
 
     .user {
+      background: #e0f2fe;
+      align-self: flex-end;
       text-align: right;
-      color: #1a73e8;
+      border-bottom-right-radius: 0;
     }
 
     .bot {
+      background: #f3f4f6;
+      align-self: flex-start;
       text-align: left;
-      color: #333;
+      border-bottom-left-radius: 0;
+    }
+
+    .input-area {
+      padding: 15px;
+      border-top: 1px solid #e5e7eb;
+      background: #fff;
     }
 
     textarea {
       width: 100%;
-      padding: 10px;
-      border-radius: 8px;
+      height: 60px;
+      padding: 10px 12px;
       border: 1px solid #ccc;
-      resize: none;
+      border-radius: 10px;
       font-size: 16px;
+      resize: none;
+      box-sizing: border-box;
     }
 
     button {
       margin-top: 10px;
-      padding: 10px 20px;
+      width: 100%;
+      padding: 12px;
       background-color: #1a73e8;
       color: white;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 16px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
       background-color: #0f5ccc;
     }
+
+    .typing {
+      font-style: italic;
+      color: #888;
+      padding: 5px 0;
+    }
   </style>
 </head>
 <body>
   <div class="chat-container">
-    <h2 style="text-align: center;">💬 دردشة GPT الذكية</h2>
+    <div class="chat-header">💬 دردشة GPT الذكية - Modweeb</div>
     <div id="chat-box" class="chat-box"></div>
-    <textarea id="user-input" rows="3" placeholder="اكتب رسالتك هنا..."></textarea>
-    <button onclick="sendMessage()">إرسال</button>
+    <div class="input-area">
+      <textarea id="user-input" placeholder="اكتب رسالتك هنا..."></textarea>
+      <button onclick="sendMessage()">إرسال</button>
+    </div>
   </div>
 
   <script>
-  const chatBox = document.getElementById("chat-box");
-  const userInput = document.getElementById("user-input");
+    const chatBox = document.getElementById("chat-box");
+    const userInput = document.getElementById("user-input");
 
-  async function sendMessage() {
-  const message = userInput.value.trim();
-  if (!message) return;
+    async function sendMessage() {
+      const message = userInput.value.trim();
+      if (!message) return;
 
-  appendMessage("أنت", message, "user");
-  userInput.value = "";
-  appendMessage("المساعد", "جاري الكتابة...", "bot");
+      appendMessage(message, "user");
+      userInput.value = "";
+      appendTyping();
 
-  try {
-    const response = await fetch("https://modweeb-chatgpt.modweeb3.workers.dev", {
-      method: "POST",
-      headers: { 
-        "Content-Type": "application/json; charset=utf-8"
-      },
-      body: JSON.stringify({ 
-        message: message.substring(0, 1000) // تقليل طول الرسالة
-      })
-    });
+      try {
+        const response = await fetch("https://modweeb-chatgpt.modweeb3.workers.dev", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            message: message.substring(0, 1000)
+          })
+        });
 
-    const data = await response.json();
-    if (data.error) throw new Error(data.error);
-    
-    updateLastBotMessage(data.reply || "لا يوجد رد");
-    
-  } catch (error) {
-    updateLastBotMessage("⚠️ " + (
-      error.message.includes('JSON') ? "خطأ في إرسال البيانات" :
-      error.message.includes('Network') ? "مشكلة في الاتصال" :
-      error.message
-    ));
-    console.error("Error details:", error);
-  }
-}
+        const data = await response.json();
+        removeTyping();
 
-  function appendMessage(sender, text, type) {
-    const div = document.createElement("div");
-    div.className = type;
-    div.innerHTML = `<strong>${sender}:</strong> ${text}`;
-    chatBox.appendChild(div);
-    chatBox.scrollTop = chatBox.scrollHeight;
-  }
+        if (data.error) throw new Error(data.error);
+        appendMessage(data.reply || "لا يوجد رد", "bot");
 
-  function updateLastBotMessage(text) {
-    const messages = chatBox.getElementsByClassName("bot");
-    if (messages.length > 0) {
-      messages[messages.length - 1].innerHTML = `<strong>GPT:</strong> ${text}`;
+      } catch (error) {
+        removeTyping();
+        appendMessage("⚠️ حدث خطأ أثناء الاتصال بالخادم.", "bot");
+        console.error(error);
+      }
+    }
+
+    function appendMessage(text, sender) {
+      const message = document.createElement("div");
+      message.className = `message ${sender}`;
+      message.textContent = text;
+      chatBox.appendChild(message);
       chatBox.scrollTop = chatBox.scrollHeight;
     }
-  }
 
-  // إرسال الرسالة بالضغط على Enter
-  userInput.addEventListener("keypress", (e) => {
-    if (e.key === "Enter" && !e.shiftKey) {
-      e.preventDefault();
-      sendMessage();
+    function appendTyping() {
+      const typing = document.createElement("div");
+      typing.className = "message bot typing";
+      typing.textContent = "يكتب الآن...";
+      typing.id = "typing";
+      chatBox.appendChild(typing);
+      chatBox.scrollTop = chatBox.scrollHeight;
     }
-  });
-</script>
+
+    function removeTyping() {
+      const typing = document.getElementById("typing");
+      if (typing) typing.remove();
+    }
+
+    // إرسال بالضغط على Enter
+    userInput.addEventListener("keypress", (e) => {
+      if (e.key === "Enter" && !e.shiftKey) {
+        e.preventDefault();
+        sendMessage();
+      }
+    });
+  </script>
 </body>
 </html>
